refresh lobbies when deposit

--- a/templates/bank.hbs
+++ b/templates/bank.hbs
@@ -1,4 +1,4 @@
-<span id="amount">{{amount}}</span> <img src='assets/img/ruby.png' alt='rubies' />
+<span id="balance">{{balance}}</span> <img src='assets/img/ruby.png' alt='rubies' />
 
 <a href="#iframe_popup_to_our_payment_service">buy rubies</a>
 <button id="demo">(demo) 1000 rubies deposit</button>
