--- a/templates/lobby.hbs
+++ b/templates/lobby.hbs
@@ -7,5 +7,5 @@
 
 <pre>
   {{#each lobbies}}
-  *{{this.name}}: {{this.amount}} rubies{{/each}}
+  *{{this.name}}: {{this.cost}} rubies{{/each}}
 </pre>
