correct uri to respect REST standard

--- a/templates/bank.hbs
+++ b/templates/bank.hbs
@@ -1,3 +1,3 @@
-<span id="balance">{{balance}}</span> <img src='assets/img/ruby.png' alt='rubies' />
+<img src='assets/img/ruby.png' alt='rubies' /><span id="balance">{{balance}}</span> 
 
 <button id="demo"></button>
